# TEA

./: LICENSE  README.md  attribution.txt  flake.nix  gen_strategy.py  pyproject.toml
tea/: __init__.py  tea.py
tea/data/: attribution.txt
